tests/reference/run-derived_type_06-2623a81.stderr
semantic error: Two or more part references with non-zero rank must not be specified.
  --> tests/errors/derived_type_06.f90:14:5
   |
14 |     main_arr%arr_2%num = 22
   |     ^^^^^^^^^^^^^^^^^^ 
